--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "scripts": {
     "build": "tsc",
     "fmt": "prettier --write .",
-    "test": "node --test"
+    "test": "node --test",
+    "bundle": "node scripts/bundle.js"
   },
   "dependencies": {
     "js-yaml": "^4.1.0",
@@ -36,6 +37,8 @@
     "@cdktf/provider-kubernetes": "^11.6.0",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.14.2",
+    "esbuild": "^0.21.5",
+    "postject": "^1.0.0-alpha.6",
     "prettier": "^3.3.2",
     "typescript": "^5.4.5"
   },
