--- a/package.json
+++ b/package.json
@@ -15,7 +15,16 @@
   "license": "MIT",
   "author": "Björn Brauer <zaubernerd@zaubernerd.de>",
   "type": "module",
-  "main": "src/index.js",
+  "files": [
+    "src",
+    "types"
+  ],
+  "exports": {
+    ".": {
+      "types": "./types/main.d.ts",
+      "import": "./src/main.js"
+    }
+  },
   "bin": {
     "crd-to-cdktf": "src/bin.js"
   },
@@ -48,5 +57,10 @@
   },
   "engines": {
     "node": ">=18.12.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org",
+    "provenance": true
   }
 }
